objects/dgAI2__DG_Dependencies__c.object
<CustomObject>
    <description>Stores the dependencies (e.g. dependent picklist values) that DG should use for validation of predictions</description>
    <fields>
        <fullName>dgAI2__Controlling_Value__c</fullName>
        <label>Controlling Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dgAI2__Dependency__c</fullName>
        <description>The two fields that have a dependency</description>
        <label>Dependency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dgAI2__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dgAI2__Valid_Values__c</fullName>
        <label>Valid Values</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <label>DG Dependencies</label>
    <listViews>
        <fullName>dgAI2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DG Dependencies Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DG Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>